# AG-LDM

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
scripts/: synthseg_code_map.json
scripts/training/: evaluate.py  evaluate.sh  train_autoencoder.py  train_autoencoder.sh  train_diffusion.py  train_diffusion.sh
scripts/training/segment_utils/: segmentor_module.py
scripts/training/wasabi_utils/: metrics.py
src/brlp/: __init__.py  const.py  networks.py  sampling.py  utils.py
